[workspace]
resolver = "2"
members = [
  "test-utils",
  "deploy",
  "e2e",
  "demo",
  "contracts/hooks/merkle-tree-hook",
  "contracts/hooks/aggregation",
  "contracts/hooks/gas-paymaster",
  "contracts/test/merkle-test",
  "contracts/ism/aggregation-ism",
  "contracts/ism/routing/domain-routing-ism",
  "contracts/ism/routing/default-fallback-domain-routing-ism",
  "contracts/ism/multisig/message-id-multisig-ism",
  "contracts/ism/multisig/merkle-root-multisig-ism",
  "contracts/ism/pausable-ism",
  "contracts/gas-oracle",
  "contracts/hooks/gas-paymaster",
  "contracts/hooks/fallback-domain-routing-hook",
  "contracts/hooks/pausable-hook",
  "contracts/hooks/protocol-fee",
  "contracts/validator-announce",
  "contracts/mailbox",
  "contracts/warp-route",
  "infra/fuel-node",
]


[workspace.dependencies]
fuels = "0.66.9"
ethers = { git = "https://github.com/hyperlane-xyz/ethers-rs", tag = "2024-04-25" }
hyperlane-core = { git = "https://github.com/hyperlane-xyz/hyperlane-monorepo", rev = "befc38d" }
hyperlane-ethereum = { git = "https://github.com/hyperlane-xyz/hyperlane-monorepo", branch = "main" }
tokio = { version = "1.12", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
sha3 = "0.10.8"
serde_json = "1.0"
rand = "0.8"
futures = "0.3"
hex = "0.4"
alloy-signer = "0.4.2"
alloy-signer-local = "0.4.2"
alloy-primitives = "0.8.5"
